# Open-Audio-Server

./: .gitignore  CMakeLists.txt  README  README.md  README.wiki  oas_config.xml
client/: .gitignore  CMakeLists.txt  README  README.md
client/CMake/: Doxyfile.in  cmake_uninstall.cmake.in  config.h.in
client/docs/: .gitignore
client/examples/: CMakeLists.txt  doppler.cpp  orientation.cpp  test.cpp
client/src/: ClientInterface.cpp  ClientInterface.h  Listener.cpp  Listener.h  OASClient.h  OASClientInterface.cpp  OASClientInterface.h  OASSound.cpp  OASSound.h  OASSoundListener.cpp  OASSoundUpdateCallback.cpp  OASSoundUpdateCallback.h  Sound.cpp  Sound.h  SoundUpdateCallback.cpp  SoundUpdateCallback.h  Time.cpp  Time.h
server/: .gitignore  CMakeLists.txt  README  README.wiki  sample_oas_config.xml
server/CMakeModules/: FindDOXYGEN.cmake
server/docs/: .gitignore  Doxyfile.in
server/src/: .gitignore  OASAudioHandler.cpp  OASAudioHandler.h  OASAudioListener.cpp  OASAudioListener.h  OASAudioSource.cpp  OASAudioSource.h  OASFileHandler.cpp  OASFileHandler.h  OASLogger.cpp  OASLogger.h  OASMessage.cpp  OASMessage.h  OASServer.cpp  OASServer.h  OASServerInfo.cpp  OASServerInfo.h  OASServerWindow.cpp  OASServerWindow.h  OASServerWindowTable.cpp  OASSocketHandler.cpp  OASSocketHandler.h  OASTime.cpp  OASTime.h
