
FIND_PACKAGE(OASCLIENT REQUIRED)

OPTION(BUILD_DOPPLER "Build the doppler effect example" OFF)
OPTION(BUILD_TEST "Build a basic test example" OFF)

IF(BUILD_DOPPLER)
    ADD_EXECUTABLE(doppler doppler.cpp)
    TARGET_LINK_LIBRARIES(doppler ${OASCLIENT_LIBRARY})
ENDIF(BUILD_DOPPLER)

IF(BUILD_TEST)
    ADD_EXECUTABLE(test test.cpp)
    TARGET_LINK_LIBRARIES(test ${OASCLIENT_LIBRARY})
ENDIF(BUILD_TEST)

INCLUDE_DIRECTORIES(${OASCLIENT_INCLUDE_DIR})

